--- a/css/nuevo.css
+++ b/css/nuevo.css
@@ -9,6 +9,9 @@ body {
 }
 .modal {
   display: block; /* Hidden by default */
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(10px, 1fr));
+  gap: 0px;
   position: fixed; /* Stay in place */
   z-index: 16384; /* Sit on top */
   left: 0px;
@@ -22,7 +25,20 @@ body {
   border-radius: 0px;
 }
 
-.modal-content {
+.content-left {
+	background-color: rgb(0,0,0);
+	background-color: rgb(18, 140, 15, 0.58);
+    align-items: center;
+	margin: 10% auto 5% auto;  /* top, left, bottom, right  */
+    border: 1px solid  rgba(0,0,0,0.20);
+	width: 300px; /* Could be more or less, depending on screen size */
+	box-shadow: -5px 10px 20px 1px rgba(0,0,0,0.25), inset 0px 0px 0px 0px rgba(0, 0, 0, 0.0);
+	border-radius: 10px;
+    height: 300px;
+    padding: 0px;
+}
+
+.content-right {
 	background-color: rgb(0,0,0);
 	background-color: rgb(18, 140, 15, 0.58);
     align-items: center;
@@ -35,12 +51,13 @@ body {
     padding: 0px;
 }
 
+/* 
 @media only screen and (max-width: 600px) {
     .modal-content {
         margin-top: 15%;
       width: 400px;
     }
-  }
+  } */
 
 .content-header {
     display: flex;
