--- a/css/navbar.css
+++ b/css/navbar.css
@@ -20,7 +20,10 @@ html, body {
 .navbar {
   display: flex;
   align-items:center;
-  position: fixed;
+  position: fixed; /* Stay in place */
+  z-index: 4096; /* Sit on top */
+  left: 0px;
+  top: 0px;
   justify-content:space-between;
   width: 100%;
   height: 44px;
@@ -48,6 +51,11 @@ html, body {
   background-image: url("../Imagenes/icon_perro.png");
 }
 
+.menu > span {
+  font-family: "BM-HANNA";
+  background-color: transparent;
+ }
+
 /* menu */
 .menu ul {
   list-style:none;
@@ -65,7 +73,6 @@ html, body {
   font-size:20px;
   font-style: normal;
   line-height: 18px;
-  font-family: 'BM HANNA_TTF';
   text-align: right;
  }
  
