--- a/estilo.css
+++ b/estilo.css
@@ -1,10 +1,3 @@
-body { 
-    margin:0; 
-    font-size:16px;
-    min-height: 100vh; 
-    padding:0; 
-    }
-
 /* estilo de las imagenes de las mascotas */  
 .item img{
     width: 195px; 
@@ -18,7 +11,7 @@ body {
   justify-content: left;
   padding-left: 2rem;
   padding-right: 2rem;
-  padding-top: 2rem;
+  padding-top: 64px;
 }
 
 /*  Estilos de las imágenes de las mascotas */
@@ -161,7 +154,6 @@ body {
 .card .card-body{
     flex-basis: 100%;
     padding: 1rem;
-
 }  
 
 .card .card-body p {
@@ -169,8 +161,8 @@ body {
 
 }
 
-.card .card-body a{
-    margin-left: 0.5rem;
+.card .card-body button{
+    margin-left: 0.3rem;
     text-decoration: none;
     color: #FFFFFF;
     display: inline-block;
@@ -180,9 +172,10 @@ body {
     border-radius: 0.5rem;
     margin-top: 1.2rem;
     transition: background-color 0.4s ease-in, color 0.4s ease-in;
+    cursor: pointer;
 }
 
-.card .card-body a:hover{
+.card .card-body button:hover{
     background-color: #13c459;
     border-color: transparent;
     color:white;
@@ -194,8 +187,23 @@ body {
     flex-basis: 100%;
 }
 
-.container{
-    padding: 2rem 15rem;
+.btns {
+    display: flex;
+}
+
+.container {
+    text-align: center;
+    position: fixed;
+    left: 0px;
+    bottom: 0px;
+    height: 34px;
+    width: 100%;
+    line-height: 34px;
+    background-color: #13c459;
+}
+.container-cliente {
+
+    padding: 2rem 0rem;
     background-color: #13c459;
 }
 
