--- a/css/nuevo.css
+++ b/css/nuevo.css
@@ -132,8 +132,18 @@ label {
     line-height: 40px;
 }
 
-form {
+.content-left > label {
+    cursor: pointer;
+}
+
+#form-right {
     width: 100%;
+}
+
+#upload-photo {
+    opacity: 0;
+    position: absolute;
+    z-index: -1;
 }
 
 input {
