--- a/css/modal.css
+++ b/css/modal.css
@@ -76,6 +76,16 @@ body {
   color: white;
 } */
 
+.btn-close {
+  float: right;
+  margin: 10px;
+  cursor: pointer;
+}
+
+.btn-close:hover {
+  color: white;
+}
+
 table {
   border-collapse: collapse;
   margin: 0px auto 0px auto;
